feat(ci-cd): prepare a command lint:code:fix:all

--- a/core/ci-cd/package.json
+++ b/core/ci-cd/package.json
@@ -8,6 +8,14 @@
   },
   "type": "module",
   "scripts": {
+    "lint:code:fix:all": "pnpm run lint:code:fix:app && pnpm run lint:code:fix:design-system && pnpm run lint:code:fix:i18n && pnpm run lint:code:fix:micro-apps && pnpm run lint:code:fix:micro-services && pnpm run lint:code:fix:toolkit",
+    "lint:code:fix:app": "pnpm --filter @windows98/app run lint:code:fix",
+    "lint:code:fix:design-system": "pnpm --filter @windows98/design-system run lint:code:fix",
+    "lint:code:fix:i18n": "pnpm --filter @windows98/i18n run lint:code:fix",
+    "lint:code:fix:linters": "pnpm --filter @windows98/linters run lint:code:fix",
+    "lint:code:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:code:fix",
+    "lint:code:fix:micro-services": "pnpm --filter @windows98/micro-services run lint:code:fix",
+    "lint:code:fix:toolkit": "pnpm --filter @windows98/toolkit run lint:code:fix",
     "lint:code:run:all": "pnpm run lint:code:run:app && pnpm run lint:code:run:design-system && pnpm run lint:code:run:i18n && pnpm run lint:code:run:micro-apps && pnpm run lint:code:run:micro-services && pnpm run lint:code:run:toolkit",
     "lint:code:run:app": "pnpm --filter @windows98/app run lint:code:run",
     "lint:code:run:design-system": "pnpm --filter @windows98/design-system run lint:code:run",
