--- a/core/toolkit/package.json
+++ b/core/toolkit/package.json
@@ -13,8 +13,8 @@
     "typescript": "5.4.2"
   },
   "scripts": {
+    "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
-    "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:types:run": "tsc"
   }
 }
