--- a/mother-frontend/micro-services/package.json
+++ b/mother-frontend/micro-services/package.json
@@ -15,8 +15,8 @@
     "vitest": "^0.31.4"
   },
   "scripts": {
+    "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
-    "lintfix:js": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:types:run": "tsc"
   }
 }
