--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -149,7 +149,7 @@ jobs:
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
 
       - name: Lint with Stylelint
-        run: pnpm --filter @windows98/stylelint-config run lint:styles
+        run: pnpm --filter @windows98/ci-cd run lint:styles:run:all
 
   vitest-tests:
     runs-on: ubuntu-latest
