--- a/core/ci-cd/package.json
+++ b/core/ci-cd/package.json
@@ -24,6 +24,14 @@
     "lint:code:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:code:run",
     "lint:code:run:micro-services": "pnpm --filter @windows98/micro-services run lint:code:run",
     "lint:code:run:toolkit": "pnpm --filter @windows98/toolkit run lint:code:run",
+    "lint:styles:fix:all": "pnpm run lint:styles:fix:app && pnpm run lint:styles:fix:design-system && pnpm run lint:styles:fix:micro-apps",
+    "lint:styles:fix:app": "pnpm --filter @windows98/app run lint:styles:fix",
+    "lint:styles:fix:design-system": "pnpm --filter @windows98/design-system run lint:styles:fix",
+    "lint:styles:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:styles:fix",
+    "lint:styles:run:all": "pnpm run lint:styles:run:app && pnpm run lint:styles:run:design-system && pnpm run lint:styles:run:micro-apps",
+    "lint:styles:run:app": "pnpm --filter @windows98/app run lint:styles:run",
+    "lint:styles:run:design-system": "pnpm --filter @windows98/design-system run lint:styles:run",
+    "lint:styles:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:styles:run",
     "lint:types:run:all": "pnpm run lint:types:run:app && pnpm run lint:types:run:design-system && pnpm run lint:types:run:i18n && pnpm run lint:types:run:micro-apps && pnpm run lint:types:run:micro-services && pnpm run lint:types:run:toolkit",
     "lint:types:run:app": "pnpm --filter @windows98/app run lint:types:run",
     "lint:types:run:design-system": "pnpm --filter @windows98/design-system run lint:types:run",
