feat(ma): install lint-staged and import code config

--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -35,6 +35,7 @@
     "@windows98/linters": "workspace:*",
     "@windows98/stylelint-config": "workspace:*",
     "@windows98/toolkit": "workspace:*",
+    "lint-staged": "15.2.2",
     "sass": "1.62.1",
     "stylelint": "16.2.1",
     "typescript": "5.4.2",
@@ -53,6 +54,7 @@
     "preview": "vite preview @bundler",
     "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
+    "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
     "lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"calendar/**/*.scss\" --fix",
     "lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"calendar/**/*.scss\"",
     "lint:types:run": "tsc",
