feat(linters): add styles config in lint-staged

--- a/core/linters/package.json
+++ b/core/linters/package.json
@@ -8,6 +8,7 @@
 	},
 	"exports": {
 		"./lint-staged/code": "./src/configs/lint-staged/code.config.cjs",
+		"./lint-staged/styles": "./src/configs/lint-staged/styles.config.cjs",
 		"./ts-config/base": "./src/configs/ts-config/base.config.json",
 		"./ts-config/cypress": "./src/configs/ts-config/cypress.config.json",
 		"./ts-config/node": "./src/configs/ts-config/react.config.json",
