--- a/core/toolkit/package.json
+++ b/core/toolkit/package.json
@@ -10,11 +10,13 @@
   "devDependencies": {
     "@windows98/eslint-config": "workspace:*",
     "@windows98/linters": "workspace:*",
+    "lint-staged": "15.2.2",
     "typescript": "5.4.2"
   },
   "scripts": {
     "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
+    "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
     "lint:types:run": "tsc"
   }
 }
