feat(ci-cd): add a command lint:staged:fix:all and replace it in husky

--- a/core/ci-cd/package.json
+++ b/core/ci-cd/package.json
@@ -24,6 +24,14 @@
     "lint:code:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:code:run",
     "lint:code:run:micro-services": "pnpm --filter @windows98/micro-services run lint:code:run",
     "lint:code:run:toolkit": "pnpm --filter @windows98/toolkit run lint:code:run",
+    "lint:staged:fix:all": "pnpm run lint:staged:fix:app && pnpm run lint:staged:fix:design-system && pnpm run lint:staged:fix:i18n && pnpm run lint:staged:fix:micro-apps && pnpm run lint:staged:fix:micro-services && pnpm run lint:staged:fix:toolkit",
+    "lint:staged:fix:app": "pnpm --filter @windows98/app run lint:staged:fix",
+    "lint:staged:fix:design-system": "pnpm --filter @windows98/design-system run lint:staged:fix",
+    "lint:staged:fix:i18n": "pnpm --filter @windows98/i18n run lint:staged:fix",
+    "lint:staged:fix:linters": "pnpm --filter @windows98/linters run lint:staged:fix",
+    "lint:staged:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:staged:fix",
+    "lint:staged:fix:micro-services": "pnpm --filter @windows98/micro-services run lint:staged:fix",
+    "lint:staged:fix:toolkit": "pnpm --filter @windows98/toolkit run lint:staged:fix",
     "lint:styles:fix:all": "pnpm run lint:styles:fix:app && pnpm run lint:styles:fix:design-system && pnpm run lint:styles:fix:micro-apps",
     "lint:styles:fix:app": "pnpm --filter @windows98/app run lint:styles:fix",
     "lint:styles:fix:design-system": "pnpm --filter @windows98/design-system run lint:styles:fix",
