--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
+    "eslint": "8.57.0",
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@pinia/testing": "^0.1.2",
     "@vitejs/plugin-vue": "5.0.4",
