--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "eslint": "8.57.0",
     "@playwright/experimental-ct-react": "^1.41.1",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.43",
