--- a/core/toolkit/package.json
+++ b/core/toolkit/package.json
@@ -8,6 +8,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "eslint": "8.57.0",
     "@windows98/eslint-config": "workspace:*",
     "@windows98/linters": "workspace:*",
     "lint-staged": "15.2.2",
