--- a/mother-frontend/micro-apps/package.json
+++ b/mother-frontend/micro-apps/package.json
@@ -24,6 +24,7 @@
     "@r2wc/react-to-web-component": "^2.0.3"
   },
   "devDependencies": {
+    "eslint": "8.57.0",
     "@playwright/experimental-ct-react": "^1.41.1",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
