--- a/mother-frontend/micro-services/package.json
+++ b/mother-frontend/micro-services/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "eslint": "8.57.0",
     "@windows98/eslint-config": "workspace:*",
+    "@windows98/configs": "workspace:*",
     "@windows98/linters": "workspace:*",
     "@windows98/toolkit": "workspace:*",
     "lint-staged": "15.2.2",
@@ -20,6 +21,8 @@
     "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
     "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
-    "lint:types:run": "tsc"
+    "lint:types:run": "tsc",
+    "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.js",
+    "test:unit:watch": "vitest -c ./@test/vitest/vitest.config.js"
   }
 }
