--- a/core/toolkit/package.json
+++ b/core/toolkit/package.json
@@ -9,15 +9,19 @@
   "type": "module",
   "devDependencies": {
     "eslint": "8.57.0",
+    "@windows98/configs": "workspace:*",
     "@windows98/eslint-config": "workspace:*",
     "@windows98/linters": "workspace:*",
     "lint-staged": "15.2.2",
-    "typescript": "5.4.2"
+    "typescript": "5.4.2",
+    "vitest": "1.3.1"
   },
   "scripts": {
     "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
     "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
-    "lint:types:run": "tsc"
+    "lint:types:run": "tsc",
+    "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.js",
+    "test:unit:watch": "vitest -c ./@test/vitest/vitest.config.js"
   }
 }
