--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,9 @@
     "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
     "lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"Bundles/**/*.scss\" --fix",
     "lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"Bundles/**/*.scss\"",
-    "lint:types:run": "vue-tsc --noEmit"
+    "lint:types:run": "vue-tsc --noEmit",
+    "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.js",
+    "test:unit:watch": "vitest -c ./@test/vitest/vitest.config.js"
   },
   "dependencies": {
     "pinia": "^2.1.3",
@@ -28,8 +30,9 @@
     "@pinia/testing": "^0.1.2",
     "@vitejs/plugin-vue": "5.0.4",
     "@vue/test-utils": "^2.3.2",
+    "@windows98/configs": "workspace:*",
     "@windows98/design-system": "workspace:*",
-    "@windows98/eslint-config": "workspace:^",
+    "@windows98/eslint-config": "workspace:*",
     "@windows98/i18n": "workspace:*",
     "@windows98/micro-apps": "workspace:*",
     "@windows98/micro-services": "workspace:*",
@@ -45,5 +48,6 @@
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "1.3.1",
     "vue-tsc": "2.0.6"
-  }
+  },
+  "type": "module"
 }
