--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -184,7 +184,7 @@ jobs:
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
 
       - name: Run Vitest tests
-        run: pnpm run --filter @windows98/vitest test:unit:run
+        run: pnpm run --filter @windows98/ci-cd test:unit:run:all
 
   build:
     runs-on: ubuntu-latest
