--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -38,10 +38,10 @@
     "lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.scss\"",
     "lint:types:run": "tsc",
     "preview": "vite preview @bundler",
-    "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.ts",
-    "test:unit:watch": "vitest -c ./@test/vitest/vitest.config.ts",
-    "test:integration:run": "playwright test -c ./@test/playwright/playwright-ct.config.ts",
-    "test:integration:watch": "playwright test -c ./@test/playwright/playwright-ct.config.ts --ui"
+    "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.js",
+    "test:unit:watch": "vitest -c ./@test/vitest/vitest.config.js",
+    "test:ui:run": "playwright test -c ./@test/playwright/playwright-ct.config.mjs",
+    "test:ui:watch": "playwright test -c ./@test/playwright/playwright-ct.config.mjs --ui"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -54,6 +54,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "@windows98/configs": "workspace:*",
     "@windows98/eslint-config": "workspace:*",
     "@windows98/linters": "workspace:*",
     "@windows98/stylelint-config": "workspace:*",
