feat(all): install types react and react-dom

--- a/core/ci-cd/package.json
+++ b/core/ci-cd/package.json
@@ -40,9 +40,10 @@
     "lint:styles:run:app": "pnpm --filter @windows98/app run lint:styles:run",
     "lint:styles:run:design-system": "pnpm --filter @windows98/design-system run lint:styles:run",
     "lint:styles:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:styles:run",
-    "lint:types:run:all": "pnpm run lint:types:run:app && pnpm run lint:types:run:design-system && pnpm run lint:types:run:i18n && pnpm run lint:types:run:micro-apps && pnpm run lint:types:run:micro-services && pnpm run lint:types:run:toolkit",
+    "lint:types:run:all": "pnpm run lint:types:run:app && pnpm run lint:types:run:design-system && pnpm run lint:types:run:docs && pnpm run lint:types:run:i18n && pnpm run lint:types:run:micro-apps && pnpm run lint:types:run:micro-services && pnpm run lint:types:run:toolkit",
     "lint:types:run:app": "pnpm --filter @windows98/app run lint:types:run",
     "lint:types:run:design-system": "pnpm --filter @windows98/design-system run lint:types:run",
+    "lint:types:run:docs": "pnpm --filter @windows98/docs run lint:types:run",
     "lint:types:run:i18n": "pnpm --filter @windows98/i18n run lint:types:run",
     "lint:types:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:types:run",
     "lint:types:run:micro-services": "pnpm --filter @windows98/micro-services run lint:types:run",
