--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,9 @@
     "@storybook/test": "8.0.2",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
+    "@windows98/eslint-config": "workspace:*",
     "@windows98/linters": "workspace:*",
+    "eslint": "8.57.0",
     "prop-types": "15.8.1",
     "storybook": "8.0.2",
     "typescript": "5.4.2"
@@ -23,6 +25,8 @@
   "scripts": {
     "build": "storybook build",
     "dev": "storybook dev -p 6006",
+    "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts, .tsx, .mdx\"",
+    "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts, .tsx, .mdx\"",
     "lint:types:run": "tsc"
   },
   "version": "1.0.0"
