--- a/docs/package.json
+++ b/docs/package.json
@@ -16,6 +16,7 @@
     "@windows98/eslint-config": "workspace:*",
     "@windows98/linters": "workspace:*",
     "eslint": "8.57.0",
+    "lint-staged": "15.2.2",
     "prop-types": "15.8.1",
     "storybook": "8.0.2",
     "typescript": "5.4.2"
@@ -27,6 +28,7 @@
     "dev": "storybook dev -p 6006",
     "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts, .tsx, .mdx\"",
     "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts, .tsx, .mdx\"",
+    "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
     "lint:types:run": "tsc"
   },
   "version": "1.0.0"
