feat(docs): install @windows98/design-system, update import stories in config, add documentation template, import documentation template in preview, add stories ds-frame

--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
     "@storybook/test": "8.0.4",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
+    "@windows98/design-system": "workspace:*",
     "@windows98/eslint-config": "workspace:*",
     "@windows98/linters": "workspace:*",
     "eslint": "8.57.0",
