--- a/app/package.json
+++ b/app/package.json
@@ -7,9 +7,9 @@
     "node": "20.12.0"
   },
   "scripts": {
-    "app:build": "vite build --config ./configs/vite.config.ts",
-    "app:dev": "vite --config ./configs/vite.config.ts",
-    "app:preview": "vite preview --config ./configs/vite.config.ts",
+    "app:build": "vite build --config ./configs/vite.config.mts",
+    "app:dev": "vite --config ./configs/vite.config.mts",
+    "app:preview": "vite preview --config ./configs/vite.config.mts",
     "lint:code:fix": "eslint -c ./@linter/eslint.config.cjs --fix --ext \".ts,.js,.vue\" .",
     "lint:code:run": "eslint -c ./@linter/eslint.config.cjs --ext \".ts,.js,.vue\" .",
     "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
