Patch 0.6.0 ma-timezone (#74)

--- a/micro-apps/package.json
+++ b/micro-apps/package.json
@@ -41,7 +41,7 @@
     "sass": "1.62.1",
     "stylelint": "16.2.1",
     "typescript": "5.4.2",
-    "vite": "5.1.6",
+    "vite": "5.2.8",
     "vite-plugin-css-injected-by-js": "^3.3.1",
     "vite-plugin-dts": "^3.7.0",
     "vitest": "1.3.1"
@@ -57,8 +57,8 @@
     "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
     "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
-    "lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"calendar/**/*.scss\" --fix",
-    "lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"calendar/**/*.scss\"",
+    "lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.scss\" --fix",
+    "lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.scss\"",
     "lint:types:run": "tsc",
     "test:ui:run": "playwright test -c ./@test/playwright/playwright-ct.config.mjs",
     "test:ui:watch": "playwright test -c ./@test/playwright/playwright-ct.config.mjs --ui",
