--- a/micro-services/package.json
+++ b/micro-services/package.json
@@ -15,9 +15,13 @@
     "@windows98/toolkit": "workspace:*",
     "lint-staged": "15.2.2",
     "typescript": "5.4.2",
+    "vite": "5.2.8",
+    "vite-plugin-dts": "3.7.0",
     "vitest": "1.3.1"
   },
   "scripts": {
+    "dev": "vite @bundler",
+    "build": "vite build @bundler",
     "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
     "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
     "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
