--- a/core/toolkit/package.json
+++ b/core/toolkit/package.json
@@ -6,6 +6,9 @@
   "engines": {
     "node": "20.12.0"
   },
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "type": "module",
   "devDependencies": {
     "eslint": "8.57.0",
