chore(all): remove eslint

--- a/core/linters/package.json
+++ b/core/linters/package.json
@@ -22,10 +22,8 @@
 		"lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs"
 	},
 	"devDependencies": {
-		"eslint": "8.57.0",
 		"@types/react": "18.2.43",
-		"@types/react-dom": "18.2.17",
-		"@windows98/eslint-config": "workspace:*"
+		"@types/react-dom": "18.2.17"
 	},
 	"peerDependencies": {
 		"lint-staged": "15.2.2",
