--- a/core/configs/package.json
+++ b/core/configs/package.json
@@ -5,11 +5,13 @@
 		"node": "20.12.0"
 	},
 	"exports": {
+		"./biome/shared": "./src/configs/biome/shared.config.json",
 		"./playwright/component-react": "./src/configs/playwright/component-react.config.mjs",
 		"./vitest/shared": "./src/configs/vitest/shared.config.mjs"
 	},
 	"name": "@windows98/configs",
 	"peerDependencies": {
+		"@biomejs/biome": "1.8.3",
 		"@playwright/experimental-ct-react": "1.45.1",
 		"vitest": "1.3.1"
 	},
