--- a/core/configs/src/configs/biome/shared.config.json
+++ b/core/configs/src/configs/biome/shared.config.json
@@ -1,6 +1,16 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+	"files": {
+		"ignore": [
+			".cache",
+			"build",
+			"dist",
+			"node_modules",
+			"test-results"
+		]
+	},
 	"formatter": {
+		"attributePosition": "multiline",
 		"enabled": true,
 		"indentStyle": "tab",
 		"indentWidth": 2,
@@ -13,6 +23,13 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true
+		}
+	},
+	"javascript": {
+		"formatter": {
+			"jsxQuoteStyle": "double",
+			"semicolons": "asNeeded",
+			"quoteStyle": "double"
 		}
 	}
 }
