chore(ma): install biome, extend config and lint with format all files

--- a/micro-apps/tsconfig.json
+++ b/micro-apps/tsconfig.json
@@ -1,9 +1,7 @@
 {
 	"extends": [
 		"@windows98/linters/ts-config/react",
-		"@windows98/linters/ts-config/vite",
+		"@windows98/linters/ts-config/vite"
 	],
-	"include": [
-		"./**/*"
-	],
+	"include": ["./**/*"]
 }
