chore(docs): install biome, extend config and lint with format all files

--- a/docs/package.json
+++ b/docs/package.json
@@ -1,36 +1,38 @@
 {
-  "author": "Arkadiusz Paściak",
-  "description": "This workspace uses Storybook, an open-source tool for developing UI components in isolation. It helps to build, document, and test React components interactively.",
-  "devDependencies": {
-    "@chromatic-com/storybook": "1.2.25",
-    "@storybook/addon-docs": "8.0.4",
-    "@storybook/addon-essentials": "8.0.4",
-    "@storybook/addon-interactions": "8.0.4",
-    "@storybook/addon-links": "8.0.4",
-    "@storybook/addon-onboarding": "8.0.4",
-    "@storybook/blocks": "8.0.4",
-    "@storybook/react": "8.0.4",
-    "@storybook/react-vite": "8.0.4",
-    "@storybook/test": "8.0.4",
-    "@types/react": "18.2.43",
-    "@types/react-dom": "18.2.17",
-    "@windows98/design-system": "workspace:*",
-    "@windows98/linters": "workspace:*",
-    "@windows98/micro-apps": "workspace:*",
-    "lint-staged": "15.2.2",
-    "prop-types": "15.8.1",
-    "storybook": "8.0.4",
-    "typescript": "5.4.2"
-  },
-  "main": ".storybook/main.ts",
-  "name": "@windows98/docs",
-  "scripts": {
-    "build": "storybook build",
-    "dev": "storybook dev -p 6006",
-    "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts, .tsx\"",
-    "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts, .tsx\"",
-    "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
-    "lint:types:run": "tsc"
-  },
-  "version": "1.0.0"
+	"author": "Arkadiusz Paściak",
+	"description": "This workspace uses Storybook, an open-source tool for developing UI components in isolation. It helps to build, document, and test React components interactively.",
+	"devDependencies": {
+		"@biomejs/biome": "1.8.3",
+		"@chromatic-com/storybook": "1.2.25",
+		"@storybook/addon-docs": "8.0.4",
+		"@storybook/addon-essentials": "8.0.4",
+		"@storybook/addon-interactions": "8.0.4",
+		"@storybook/addon-links": "8.0.4",
+		"@storybook/addon-onboarding": "8.0.4",
+		"@storybook/blocks": "8.0.4",
+		"@storybook/react": "8.0.4",
+		"@storybook/react-vite": "8.0.4",
+		"@storybook/test": "8.0.4",
+		"@types/react": "18.2.43",
+		"@types/react-dom": "18.2.17",
+		"@windows98/configs": "workspace:*",
+		"@windows98/design-system": "workspace:*",
+		"@windows98/linters": "workspace:*",
+		"@windows98/micro-apps": "workspace:*",
+		"lint-staged": "15.2.2",
+		"prop-types": "15.8.1",
+		"storybook": "8.0.4",
+		"typescript": "5.4.2"
+	},
+	"main": ".storybook/main.ts",
+	"name": "@windows98/docs",
+	"scripts": {
+		"build": "storybook build",
+		"dev": "storybook dev -p 6006",
+		"lint:code:fix": "biome check --config-path ./@linter/biome.config.json --fix",
+		"lint:code:run": "biome check --config-path ./@linter/biome.config.json",
+		"lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
+		"lint:types:run": "tsc"
+	},
+	"version": "1.0.0"
 }
