--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,9 +1,4 @@
 {
-	"extends": [
-		"@windows98/linters/ts-config/react",
-	],
-	"include": [
-		"./.storybook/**/*",
-		"./src/**/*",
-	],
+	"extends": ["@windows98/linters/ts-config/react"],
+	"include": ["./.storybook/**/*", "./src/**/*"]
 }
