--- a/core/design-system/tsconfig.json
+++ b/core/design-system/tsconfig.json
@@ -1,9 +1,7 @@
 {
-  "extends": [
-    "@windows98/linters/ts-config/react",
-    "@windows98/linters/ts-config/vite",
-  ],
-  "include": [
-    "./**/*"
-  ],
+	"extends": [
+		"@windows98/linters/ts-config/react",
+		"@windows98/linters/ts-config/vite"
+	],
+	"include": ["./**/*"]
 }
