chore(toolkit): install biome, extend config and lint with format all files

--- a/core/toolkit/package.json
+++ b/core/toolkit/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "@windows98/toolkit",
-  "version": "1.0.0",
-  "description": "Curated set of tools and utilities for efficient software development",
-  "author": "Arkadiusz Paściak",
-  "engines": {
-    "node": "20.12.0"
-  },
-  "exports": {
-    ".": "./src/index.ts"
-  },
-  "type": "module",
-  "devDependencies": {
-    "@windows98/configs": "workspace:*",
-    "lint-staged": "15.2.2",
-    "typescript": "5.4.2",
-    "vitest": "1.3.1"
-  },
-  "scripts": {
-    "lint:code:fix": "eslint --config ./@linter/eslint.config.cjs . --fix --ext \".js, .ts\"",
-    "lint:code:run": "eslint --config ./@linter/eslint.config.cjs . --ext \".js, .ts\"",
-    "lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
-    "lint:types:run": "tsc",
-    "test:unit:run": "vitest run -c ./@test/vitest/vitest.config.js",
-    "test:unit:watch": "vitest -c ./@test/vitest/vitest.config.js"
-  }
+	"name": "@windows98/toolkit",
+	"version": "1.0.0",
+	"description": "Curated set of tools and utilities for efficient software development",
+	"author": "Arkadiusz Paściak",
+	"engines": {
+		"node": "20.12.0"
+	},
+	"exports": {
+		".": "./src/index.ts"
+	},
+	"type": "module",
+	"devDependencies": {
+		"@biomejs/biome": "1.8.3",
+		"@windows98/configs": "workspace:*",
+		"@windows98/linters": "workspace:*",
+		"lint-staged": "15.2.2",
+		"typescript": "5.4.2",
+		"vitest": "1.3.1"
+	},
+	"scripts": {
+		"lint:code:fix": "biome check --config-path ./@linter/biome.config.json --fix",
+		"lint:code:run": "biome check --config-path ./@linter/biome.config.json",
+		"lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
+		"lint:types:run": "tsc",
+		"test:unit:run": "vitest run -c ./@test/vitest/vitest.config.js",
+		"test:unit:watch": "vitest -c ./@test/vitest/vitest.config.js"
+	}
 }
