--- a/core/ci-cd/package.json
+++ b/core/ci-cd/package.json
@@ -10,15 +10,16 @@
   "scripts": {
     "lint:code:fix:all": "pnpm run lint:code:fix:app && pnpm run lint:code:fix:design-system && pnpm run lint:code:fix:docs && pnpm run lint:code:fix:i18n && pnpm run lint:code:fix:micro-apps && pnpm run lint:code:fix:micro-services && pnpm run lint:code:fix:toolkit",
     "lint:code:fix:app": "pnpm --filter @windows98/app run lint:code:fix",
+    "lint:code:fix:configs": "pnpm --filter @windows98/configs run lint:code:fix",
     "lint:code:fix:design-system": "pnpm --filter @windows98/design-system run lint:code:fix",
     "lint:code:fix:docs": "pnpm --filter @windows98/docs run lint:code:fix",
     "lint:code:fix:i18n": "pnpm --filter @windows98/i18n run lint:code:fix",
-    "lint:code:fix:linters": "pnpm --filter @windows98/linters run lint:code:fix",
     "lint:code:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:code:fix",
     "lint:code:fix:micro-services": "pnpm --filter @windows98/micro-services run lint:code:fix",
     "lint:code:fix:toolkit": "pnpm --filter @windows98/toolkit run lint:code:fix",
     "lint:code:run:all": "pnpm run lint:code:run:app && pnpm run lint:code:run:design-system && pnpm run lint:code:run:docs && pnpm run lint:code:run:i18n && pnpm run lint:code:run:micro-apps && pnpm run lint:code:run:micro-services && pnpm run lint:code:run:toolkit",
     "lint:code:run:app": "pnpm --filter @windows98/app run lint:code:run",
+    "lint:code:run:configs": "pnpm --filter @windows98/configs run lint:code:run",
     "lint:code:run:design-system": "pnpm --filter @windows98/design-system run lint:code:run",
     "lint:code:run:docs": "pnpm --filter @windows98/docs run lint:code:run",
     "lint:code:run:i18n": "pnpm --filter @windows98/i18n run lint:code:run",
@@ -28,10 +29,10 @@
     "lint:code:run:toolkit": "pnpm --filter @windows98/toolkit run lint:code:run",
     "lint:staged:fix:all": "pnpm run lint:staged:fix:app && pnpm run lint:staged:fix:design-system && pnpm run lint:staged:fix:docs && pnpm run lint:staged:fix:i18n && pnpm run lint:staged:fix:micro-apps && pnpm run lint:staged:fix:micro-services && pnpm run lint:staged:fix:toolkit",
     "lint:staged:fix:app": "pnpm --filter @windows98/app run lint:staged:fix",
+    "lint:staged:fix:configs": "pnpm --filter @windows98/configs run lint:staged:fix",
     "lint:staged:fix:design-system": "pnpm --filter @windows98/design-system run lint:staged:fix",
     "lint:staged:fix:docs": "pnpm --filter @windows98/docs run lint:staged:fix",
     "lint:staged:fix:i18n": "pnpm --filter @windows98/i18n run lint:staged:fix",
-    "lint:staged:fix:linters": "pnpm --filter @windows98/linters run lint:staged:fix",
     "lint:staged:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:staged:fix",
     "lint:staged:fix:micro-services": "pnpm --filter @windows98/micro-services run lint:staged:fix",
     "lint:staged:fix:toolkit": "pnpm --filter @windows98/toolkit run lint:staged:fix",
