--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
     inputs:
       reason:
-        description: 'Why are you running manually?'
+        description: "Why are you running manually?"
         required: true
 
 jobs:
@@ -87,7 +87,7 @@ jobs:
       - name: Check types
         run: pnpm --filter @windows98/ci-cd run lint:types:run:all
 
-  eslint-lint:
+  code-lint-format:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -117,7 +117,7 @@ jobs:
         run: pnpm install
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
 
-      - name: Lint with ESLint
+      - name: Lint code
         run: pnpm --filter @windows98/ci-cd run lint:code:run:all
 
   stylelint-lint:
@@ -158,7 +158,7 @@ jobs:
     strategy:
       matrix:
         node-version: [20.12.0]
-    needs: [eslint-lint, stylelint-lint]
+    needs: [code-lint-format, stylelint-lint]
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
